Commit more visibility for tips

--- a/Chatbot/data/nlu/nlu_variables.yml
+++ b/Chatbot/data/nlu/nlu_variables.yml
@@ -159,6 +159,8 @@ nlu:
 # ------------> INTS <------------
 - intent: ask_question_var_ints
   examples: |
+    - variavel numerica
+    - variavel com numero
     - o que é um int
     - o que é um inteiro
     - o que são inteiros
