--- a/Chatbot/domain/domain_exercise_tips.yml
+++ b/Chatbot/domain/domain_exercise_tips.yml
@@ -164,10 +164,13 @@ responses:
             —> Os cálculos terão de ser feitos entre NUMEROS;
 
 
-            —> O raio é METADE (divisão ✌️) do diâmetro;
+            —> Não se esqueça que o dado lido é o DIÂMETRO e o raio é METADE (divisão ✌️) dele;
 
 
             —> A equação da area do círculo está no enunciado;
+
+
+            —> Atenção ao usar a função print(), ela tem de ser usada sozinha e não na declaração de uma var;
 
 
             Para saber como fazer o quadrado de um número, me pergunte "Como fazer o quadrado de um número?"</text>'
